--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "framer-motion": "^12.16.0",
     "googleapis": "^150.0.1",
+
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.16.0",
+
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
