--- a/render.yaml
+++ b/render.yaml
@@ -22,5 +22,6 @@ services:
     envVars:
       - key: VITE_API_URL
         fromService:
+          type: web
           name: manix-backend
           property: host
